Firebase link in dashboard fixed

--- a/dashboard.html
+++ b/dashboard.html
@@ -269,7 +269,16 @@
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
     <script>
-
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyB0-gzBIif0Ho5MPvWzDLE9ySiytyfMgKY",
+            authDomain: "budgetmanager-c533c.firebaseapp.com",
+            databaseURL: "https://budgetmanager-c533c.firebaseio.com",
+            projectId: "budgetmanager-c533c",
+            storageBucket: "",
+            messagingSenderId: "640045020422"
+        };
+        firebase.initializeApp(config);
 
     </script>
     <!-- Bootstrap core JavaScript
